--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "Test",
-  "description": "Test",
-  "version": "0.0.0",
+  "name": "Romania League Stunt",
+  "description": "In working.",
+  "version": "0.0.1".
   "main": "bot.js",
   "scripts": {
     "start": "node bot.js"
